--- a/D3_data_journalism/assets/css/d3Style.css
+++ b/D3_data_journalism/assets/css/d3Style.css
@@ -26,13 +26,13 @@
 /* font size dependent on radius, see app.js */
 .stateText {
   font-family: sans-serif;
-  fill: #fff;
+  fill: rgb(16, 30, 235);
   text-anchor: middle;
 }
 
 .stateCircle {
   fill: #89bdd3;
-  stroke: #e3e3e3;
+  stroke: #2511e2;
 }
 
 .chart {
@@ -48,7 +48,7 @@
   color: #fff;
   text-align: center;
   text-transform: capitalize;
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(16, 30, 235, 0.8);
   border-radius: 4px;
 }
 
